# EclipsedHorizons

./: .gitignore  .gitmodules  CMakeLists.txt  FileSystem.md  README.md  build.bat  build.py  main.cpp  toolchain.cmake
Linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
Linux/lib/raylib-master/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
Linux/lib/raylib-master/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
assets/Tilesets/: GrassAligned.ase
include/core/: camera_controller.hpp  game_engine.hpp  scene.hpp
include/entities/: entity.hpp  player.hpp
include/graphics/: level.hpp  visibility_manager.hpp
include/utils/: globals.hpp  includes.hpp
lib/mingw64/etc/pki/ca-trust/extracted/java/: cacerts
lib/mingw64/lib/cmake/nghttp2/: nghttp2-targets.cmake
lib/mingw64/lib/pkgconfig/: libcares.pc  libcurl.pc  libuv-static.pc  libuv.pc
lib/mingw64/var/lib/mingw-get/data/: sysroot-0-002-a7c6-d7dbb5.xml
source/: globals.cpp  globals.hpp  includes.hpp  main.cpp
source/assets/sounds/: EnemyDie.wav.import  Evade.wav.import  Hit.wav.import  Hurt.wav.import  Menu Move.wav.import  Menu Select.wav.import  Music.mp3.import  Pause.wav.import  Swipe.wav.import  Unpause.wav.import
source/core/: game_engine.cpp  game_engine.hpp  game_loop.cpp  game_loop.hpp  game_state_manager.cpp  game_state_manager.hpp  input_handler.cpp  input_handler.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  time_manager.cpp  time_manager.hpp
source/entities/: collision_manager.cpp  collision_manager.hpp  creature.cpp  creature.hpp  entity.cpp  entity.hpp  player.cpp  player.hpp
source/graphics/: animation_manager.cpp  animation_manager.hpp  audio_manager.cpp  audio_manager.hpp  camera_controller.cpp  camera_controller.hpp  entity_layer_manager.cpp  entity_layer_manager.hpp  texture_manager.cpp  texture_manager.hpp  time_manager.cpp  time_manager.hpp  ui_manager.cpp
source/ui/: ui_manager.hpp
source/utils/: animation_state.cpp  animation_state.hpp  sprite_sheet.cpp  sprite_sheet.hpp
src/: main.cpp
src/core/: camera_controller.cpp  game_engine.cpp  scene.cpp
src/entities/: entity.cpp  player.cpp
src/graphics/: level.cpp  visibility_manager.cpp
src/utils/: globals.cpp
